force-app/main/default/objects/Intake_History__c/Intake_History__c.object-meta.xml
<CustomObject>
    <label>Intake History</label>
    <nameField>
        <displayFormat>INH-{00000000}</displayFormat>
        <label>Intake History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>