force-app/main/default/objects/Intake_History__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Intake Histories</relationshipLabel>
    <relationshipName>Intake_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>