force-app/main/default/objects/Intake_History__c/fields/Intake_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Approval_Status__c</fullName>
    <label>Intake Approval Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>