force-app/main/default/objects/Intake_History__c/fields/Intake_Owner__c.field-meta.xml
<CustomField>
    <fullName>Intake_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intake_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>