force-app/main/default/objects/Intake_History__c/fields/Intake_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Intake_Recommendations__c</fullName>
    <label>Intake Recommendations</label>
    <length>18</length>
    <type>Text</type>
</CustomField>