force-app/main/default/objects/Intake_History__c/fields/Intatke_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Intatke_Last_Modified_Date__c</fullName>
    <label>Intatke Last Modified Date</label>
    <type>DateTime</type>
</CustomField>