force-app/main/default/objects/Intake_History__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>18</length>
    <type>Text</type>
</CustomField>