force-app/main/default/objects/Intake_History__c/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <label>Update</label>
    <type>Date</type>
</CustomField>